--- a/final project/trav.html
+++ b/final project/trav.html
@@ -58,7 +58,7 @@
       </p>
       <div class="destination__grid">
         <div class="destination__card">
-          <img src="c:\Users\ACE INFO\Downloads\KAR.JPG"onclick="window.open('karnatakaa.html','blank');"/>
+          <img src="c:\Users\ACE INFO\Downloads\KAR.JPG"onclick="window.open('karnataka.html','blank');"/>
           <div class="destination__card__details">
             <div>
               <h4>KARNATAKA</h4>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="destination__card">
-            <img src="c:\Users\ACE INFO\Downloads\WEST.JPG"onclick="window.open('west bengal.html','blank');"/>
+            <img src="c:\Users\ACE INFO\Downloads\WEST.JPG"onclick="window.open('westbengall.html','blank');"/>
             <div class="destination__card__details">
               <div>
                 <h4>WEST BENGAL</h4>
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="destination__card">
-              <img src="c:\Users\ACE INFO\Downloads\TAMIL.JPG"onclick="window.open('TAMILNADU.html','blank');"/>
+              <img src="c:\Users\ACE INFO\Downloads\TAMIL.JPG"onclick="window.open('tamilnadu.html','blank');"/>
               <div class="destination__card__details">
                 <div>
                   <h4>TAMIL NADU</h4>
@@ -82,7 +82,7 @@
                 </div>
               </div>
             <div class="destination__card">
-              <img src="c:\Users\ACE INFO\Downloads\RAJ.JPG"onclick="window.open('Rajasthan.html','blank');"/>
+              <img src="c:\Users\ACE INFO\Downloads\RAJ.JPG"onclick="window.open('rajasthan.html','blank');"/>
               <div class="destination__card__details">
                 <div>
                   <h4>RAJASTHAN</h4>
@@ -98,7 +98,7 @@
                   </div>
                 </div>
                 <div class="destination__card">
-                  <img src="c:\Users\ACE INFO\Downloads\DELHI.JPG"onclick="window.open('DELHI.HTML','blank');"/>
+                  <img src="c:\Users\ACE INFO\Downloads\DELHI.JPG"onclick="window.open('delhi.html','blank');"/>
                   <div class="destination__card__details">
                     <div>
                       <h4>Delhi</h4>
@@ -106,7 +106,7 @@
                     </div>
                   </div>
                   <div class="destination__card">
-                    <img src="c:\Users\ACE INFO\Downloads\GO.JPG"onclick="window.open('demo.html','blank');"/>
+                    <img src="c:\Users\ACE INFO\Downloads\GO.JPG"onclick="window.open('goa.html','blank');"/>
                     <div class="destination__card__details">
                       <div>
                         <h4>GOA</h4>
@@ -114,7 +114,7 @@
                       </div>
                     </div>
                     <div class="destination__card">
-                      <img src="c:\Users\ACE INFO\Downloads\HIMA.JPG"onclick="window.open('JAMMU.HTML','blank');"/>
+                      <img src="c:\Users\ACE INFO\Downloads\HIMA.JPG"onclick="window.open('jammu.html','blank');"/>
                       <div class="destination__card__details">
                         <div>
                           <h4>JAMMU AND KASHMIR</h4>
